--- a/styles/home.css
+++ b/styles/home.css
@@ -340,3 +340,44 @@ img.right-button {
 }
 
 /* chatbox */
+
+/* Product Listings */
+
+.productCard img {
+  width: 300px;
+}
+
+.productCard {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--main-font);
+}
+
+.productCard img {
+  padding: 0;
+  border-radius: 10px 10px 0 0;
+  width: 300px;
+  height: 200px;
+}
+
+.productCard section {
+  background-color: white;
+  margin: 10px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #9a9b9b;
+  width: 300px;
+  height: 400px;
+}
+
+.productCard section p, h3, h2, h1 {
+  padding-left: 10px;
+}
+
+.productCard section div {
+  align-items: center;
+ 
+}
