--- a/styles/home.css
+++ b/styles/home.css
@@ -174,7 +174,115 @@ img.right-button{
     font-size:2rem;
     display:flex;
     align-items:center;
-    border: 50%;
+    border-radius: 50%;
+    cursor:pointer;
+    transition: .2s;
 }
 
+.chatbox-toggle:active{
+    transform:scale(.9)
+}
+
+.chatbox-message-wrapper{
+    position:absolute;
+    bottom:calc(100% + 1rem);
+    right:0;
+    max-width: 420px;
+    border-radius: .5rem;
+    overflow:hidden;
+
+}
+
+chatbox-message-header{
+    display:flex;
+    align-items:center;
+    justify-content: space-between;  
+    background: var(--white);
+    padding:.75rem 1.5rem;  
+}
+
+.chatbox-message-profile{
+    display: flex;
+    align-items: center;
+    grid-gap:.5rem;
+}
+.chatbox-message-image{
+    width:3rem;
+    height:3rem;
+    object-fit: cover;
+    border-radius:50%;
+}
+
+.chatbox-message-name{
+    font-size:1.125rem;
+    font-weight:600;
+}
+.chatbox-message-status{
+    font-size: .875rem;
+    color: var(--grey-d-3);
+}
+.chatbox-message-dropdown{
+    position: relative;
+}
+
+.chatbox-message-dropdown-toggle {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.25rem;
+    cursor: pointer;
+    border-radius: 50%;
+}
+.chatbox-message-dropdown-toggle:hover{
+    background: var(--grey);
+}
+
+.chatbox-message-dropdown-menu{
+    list-style:none;
+    margin:0;
+    position: absolute;
+    top:100%;
+    right:0;
+    background: var(--white);
+    padding: .5rem 0;
+    width:120px;
+    box-shadow:.25rem .25rem 1.5rem rgba(0, 0, 0, .1);
+    transform: scale(0);
+    transition: 2s;
+}
+.chatbox-message-dropdown-menu a {
+    font-size:.875rem;
+    font-weight: 500;
+    color: var(--dark);
+    text-decoration: none;
+    padding: .5rem 1rem;
+    display:block;
+}
+.chatbox-message-dropdown-menu a:hover{
+    background: var(--grey);
+}
+.chatbox-message-content{
+    background: var(--grey);
+    padding: 1.5rem;
+    display: flex;
+    flex-direction:column;
+    grid-row-gap:1rem;
+}
+.chatbox-message-item{
+    width:90%;
+    padding: .75rem;
+}
+.chatbox-message-item.sent {
+    align-self:flex-end;
+    background:var(--blue);
+    color: var(--white);
+    border-radius: .75rem 0 .75rem .75rem;
+}
+.chatbox-message-item.recieved{
+    background:var(--white);
+    border-radius: 0 .75rem .75rem .75rem;
+    box-shadow: .25rem .25rem 1.5rem rgba(0, 0, 0, .05);
+}
 /* chatbox */
