--- a/partials/header.html
+++ b/partials/header.html
@@ -12,7 +12,7 @@
       <a href="inventory.html"> Inventory </a>
     </li>
     <li>
-      <a href="estimator.html"> Loan Estimator </a>
+      <a href="../loanEstimator.html"> Loan Estimator </a>
     </li>
     <li>
       <a href="contact-us.html"> Contact Us </a>
