--- a/styles/home.css
+++ b/styles/home.css
@@ -155,7 +155,7 @@ footer nav ul li {
   color: white;
   grid-column: 1/5;
   grid-row: 1;
-  margin-top: 115px;
+  margin-top: 89px;
   text-align: center;
   font-family: var(--main-font);
   font-size: 80px;
@@ -701,3 +701,85 @@ a:not([class]) {
 }
 /* BREAKPOINTS */
 /* chatbox */
+
+
+
+
+
+/* reviews work checked out */
+
+.hero_image_specs2{
+  width: 1409px;
+  margin: 0 auto;
+  grid-column: 1/3;
+  justify-content: center;
+  align-items: center;
+  grid-column: 1/5;
+  grid-row: 1/5;
+  z-index: 1;
+  color:black;
+  background-color: rgb(18, 17, 17);
+  opacity:.3;
+}
+.gray{
+  background-color: rgb(18, 17, 17);
+}
+
+/* .gray img{
+z-index: 1;
+color:black;
+opacity: 0.3;
+} */
+
+
+.slogan2 {
+  z-index: 1;
+  color: white;
+  grid-column: 1/5;
+  grid-row: 1;
+  margin-top: 70px;
+  margin-bottom: 0px;
+  text-align: center;
+  font-family: var(--main-font);
+  font-size: 80px;
+  text-shadow: 2px 2px 5px #555;
+}
+
+
+
+.banner section{
+  z-index: 1;
+  color: white;
+  grid-column: 1/5;
+  grid-row: 2;
+  margin-top: 10px;
+  /* text-align: center; */
+  font-family: var(--main-font);
+  font-size: 20px;
+  padding-left:200px;
+  padding-right:200px;
+}
+
+
+
+.avatar {
+  max-width: 50px;
+  max-height: 50px;
+  border: 1px solid #022542;
+  border-radius: 50%;
+}
+
+.nameloc {
+  position: relative;
+  bottom: 20px;
+  padding-left: 4px;
+  text-align: left;
+}
+
+.nameloc img {
+  max-width: 100px;
+  padding-left: 4px;
+}
+
+
+/* ..................... */
