--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap');
+
 :root {
   /* Settings */
   --spacing: 15px;
@@ -21,6 +23,10 @@ body {
   height: 100%;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--main-font);
 }
 
 /* Header and Footer */
@@ -707,6 +713,14 @@ a:not([class]) {
   grid-template-columns: auto;
 }
 
+.calculator {
+  border-style: solid;
+  border-width: 1px;
+  padding: 1em;
+  border-radius: 15px;
+  background-color: rgb(230, 230, 230);
+}
+
 .calculator form label {
   margin-top: 1em;
 }
@@ -717,6 +731,11 @@ a:not([class]) {
 
 .submit{
   margin-top: 1em;
+  color: white;
+  font-family: var(--main-font);
+  background-color: #034A83;
+  width: 150px;
+  height: 50px;
 }
 
 .results {
@@ -729,7 +748,9 @@ a:not([class]) {
   grid-template-columns: auto auto;
   grid-gap: 1em;
   margin: 0 auto;
-  width: 550px;
+  width: 800px;
+  border-style: solid;
+  padding: 1em;
 }
 
 hr
