--- a/styles/home.css
+++ b/styles/home.css
@@ -180,8 +180,8 @@ footer nav ul li {
   margin: 0 auto;
   margin-bottom: 20px;
   z-index: 1;
-  grid-column: 2/4;
-  grid-row: 3/4;
+  grid-column: 2/5;
+  grid-row: 2;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -209,14 +209,14 @@ footer nav ul li {
 }
 
 .hero_image_specs {
-  width: 1409px;
+  width: 100%;
   margin: 0 auto;
-  grid-column: 1/3;
+  /* grid-column: 1/3; */
   padding-bottom: 10px;
   justify-content: center;
   align-items: center;
-  grid-column: 1/5;
-  grid-row: 1/5;
+  grid-column: 1/6;
+  grid-row: 1/6;
   z-index: 0;
 }
 
@@ -230,6 +230,7 @@ footer nav ul li {
 
 .slogan {
   text-shadow: 2px 2px 5px #555;
+  grid-column: 1/6;
 }
 
 body {
@@ -250,14 +251,13 @@ body {
   margin: auto;
   font-size: 45px;
   background-color: rgba(102, 102, 102, 0.5);
-  /* background-color: rgb(88, 168, 253, 0.5); */
   color: white;
   position: absolute;
   z-index: 999;
-  margin: 0 auto;
-  right: 1100px;
-  left: -114px;
-  top: 0px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  grid-column: 1;
 }
 .right-button {
   height: 302px;
@@ -265,16 +265,16 @@ body {
   cursor: pointer;
   margin: auto;
   font-size: 45px;
-  /* background-color: rgb(88, 168, 253, 0.5); */
   background-color: rgba(75, 75, 75, 0.5);
   color: white;
   position: absolute;
   z-index: 999;
-  margin: 0 auto;
-  right: -165px;
-  left: 1060px;
-  bottom: 10px;
-  top: 0px;
+  display: flex;
+  justify-content: end;
+  justify-self: end;
+  align-items: center;
+  grid-column: 7;
+  grid-row: 1;
 }
 
 /* img.left-button {
@@ -291,11 +291,12 @@ img.right-button {
 .carousel {
   display: flex;
   margin: 0 auto;
-  width: 1400px;
+  width: 100%;
   overflow-x: hidden;
   overflow-y: hidden;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
+  grid-column: 1/6;
 }
 
 .slide {
@@ -318,7 +319,15 @@ img.right-button {
   margin: 10px auto;
   /* right:0%; */
   text-align: center;
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
   /* Adjust this value to move the positioned div up and down */
+}
+
+.component {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
 }
 
 /* Product Listings */
@@ -804,12 +813,12 @@ height: 1px;
 /* reviews work checked out */
 
 .hero_image_specs2{
-  width: 1409px;
+  width: 100%;
   margin: 0 auto;
   grid-column: 1/3;
   justify-content: center;
   align-items: center;
-  grid-column: 1/5;
+  grid-column: 1/6;
   grid-row: 1/5;
   z-index: 1;
   color:black;
@@ -830,7 +839,7 @@ opacity: 0.3;
 .slogan2 {
   z-index: 1;
   color: white;
-  grid-column: 1/5;
+  grid-column: 1/6;
   grid-row: 1;
   margin-top: 70px;
   margin-bottom: 0px;
@@ -845,7 +854,7 @@ opacity: 0.3;
 .banner section{
   z-index: 1;
   color: white;
-  grid-column: 1/5;
+  grid-column: 1/6;
   grid-row: 2;
   margin-top: 10px;
   /* text-align: center; */
