Fixed Contact Us link, changed Copyright to 2023

--- a/partials/header.html
+++ b/partials/header.html
@@ -15,7 +15,7 @@
       <a href="../loanEstimator.html"> Loan Estimator </a>
     </li>
     <li>
-      <a href="contact-us.html"> Contact Us </a>
+      <a href="about.html"> Contact Us </a>
     </li>
   </ul>
 </nav>
