--- a/partials/footer.html
+++ b/partials/footer.html
@@ -4,14 +4,10 @@
   <nav>
     <ul>
       <li>
-        <a href="index.html">
-          Page 1
-        </a>
+        <a href="#" class="fa fa-facebook"></a>
       </li>
       <li>
-        <a href="index.html">
-          Page 2
-        </a>
+        <a href="#" class="fa fa-twitter"></a>
       </li>
     </ul>
   </nav>
