--- a/partials/header.html
+++ b/partials/header.html
@@ -9,7 +9,7 @@
       <a href="about.html"> About </a>
     </li>
     <li>
-      <a href="inventory.html"> Inventory </a>
+      <a href="../productListing.html"> Inventory </a>
     </li>
     <li>
       <a href="../loanEstimator.html"> Loan Estimator </a>
