--- a/styles/home.css
+++ b/styles/home.css
@@ -395,7 +395,7 @@ h1 {
 /* Product Page */
 
 .productInfo {
-  width: 500px;
+  width: 50%;
   margin: 0 auto;
   font-family: var(--main-font);
 }
@@ -410,7 +410,7 @@ h1 {
 }
 
 .carImg {
-  width: 500px;
+  width: 100%;
 }
 
 .contactSeller form {
@@ -885,5 +885,30 @@ opacity: 0.3;
   padding-left: 4px;
 }
 
+/*About*/
+#aboutHero {
+  width: 100%;
+}
 
-/* ..................... */
+
+/*Mobile View */
+@media screen and (max-width: 622px) {
+
+  /*Product Info*/
+  .productInfo{
+    width: 100%;
+    padding: 1em;
+  }
+
+  /*Listings*/
+  .productCard section:hover {
+    opacity: 1;
+  }
+
+  /*Loan Estimator*/
+  .calculator {
+    width: 100%;
+  }
+
+}
+
