--- a/partials/header.html
+++ b/partials/header.html
@@ -4,7 +4,9 @@
   </a>
 </div>
 <nav>
-  <ul>
+  <a class="ham" href="#">&#9776;</a>
+  <ul class="links">
+    <li class="responsive"></li>
     <li>
       <a href="about.html"> About </a>
     </li>
