fixed mobile view on product page

--- a/styles/home.css
+++ b/styles/home.css
@@ -975,8 +975,8 @@ opacity: 0.3;
 
   /*Product Info*/
   .productInfo{
-    width: 100%;
-    padding: 1em;
+    width: 90%;
+    padding: 10px;
   }
 
   /*Listings*/
