--- a/styles/home.css
+++ b/styles/home.css
@@ -115,8 +115,8 @@ main {
   font-family: var(--main-font);
   padding-top: var(--spacing);
   padding-bottom: var(--spacing);
-  padding-left: 250px;
-  padding-right: 250px;
+  /* padding-left: 250px;
+  padding-right: 250px; */
   color: var(--font-color);
   background-color: var(--background-color);
 }
@@ -990,8 +990,12 @@ opacity: 0.3;
   }
 
   /*Loan Estimator*/
-  .calculator {
-    width: 100%;
+
+
+  .loanContent {
+    grid-template-columns: auto;
+    width: 90%;
+    border: none;
   }
 
 }
