--- a/styles/about.css
+++ b/styles/about.css
@@ -1,10 +1,10 @@
-main {
-    margin-left: 200px;
-    margin-right: 200px;
-}
 
 h1, h2, p {
     margin-bottom: 15px;
+}
+
+main {
+    padding: 1em;
 }
 
 .contact-us h1 {
@@ -16,21 +16,30 @@ h1, h2, p {
     margin-bottom: 7.5px;
 }
 
+.usefulInfo {
+    display: grid;
+    grid-template-columns: auto, auto;
+    grid-gap: 1em;
+}
+
 form {
     display: grid;
-    grid-template-rows: auto auto auto auto;
     grid-template-columns: auto;
-    margin-left: 50px;
-    margin-right: 50px;
     padding: 15px;
     border: 1px solid var(--border-color);
     background-color: var(--alt-background-color);
     font-family: var(--main-font);
     color: var(--alt-font-color);
+    width: 90%;
+    grid-column: 1;
 }
 
-input {
-    width: 100%;
+.usefulInfo iframe {
+    grid-column: 2;
+    width: 90%;
+}
+
+/* input {
     margin-top: 2.5px;
 }
 
@@ -50,7 +59,9 @@ input {
     grid-row: 3;
     grid-column: 1;
     padding-bottom: 7.5px;
-}
+} */
+
+
 
 #contact-form-submit {
     grid-row: 4;
@@ -63,4 +74,12 @@ form textarea {
     resize: none;
     width: 100%;
     margin-top: 2.5px;
+}
+
+@media screen and (max-width: 622px) {
+    .usefulInfo iframe {
+        grid-column: 1;
+        grid-row: 2;
+        width: 100%;
+    }
 }
