Spelling fix, border around chatbox icon

--- a/styles/home.css
+++ b/styles/home.css
@@ -560,6 +560,8 @@ a:not([class]) {
 	width: 4rem;
 	height: 4rem;
   font-family: (--main-font);
+  border: 1px solid #022542;
+  border-radius: 50%;
 }
 .chatbox-toggle {
 	width: 100%;
