Quick fixes to homepage

--- a/styles/home.css
+++ b/styles/home.css
@@ -555,7 +555,7 @@ a:not([class]) {
 .chatbox-wrapper {
 	z-index: 5000;
 	position: fixed;
-	bottom: 2rem;
+	bottom: 0.75rem; /* 2rem */
 	right: 2rem;
 	width: 4rem;
 	height: 4rem;
